--- a/mcem-simulations.Rmd
+++ b/mcem-simulations.Rmd
@@ -6,10 +6,20 @@ output: pdf_document
 ---
 
 # EM vs. Monte Carlo EM
+# traditional EM:
+```{r}
+library(mixtools)
+attach(faithful)
+wait1 <- normalmixEM(waiting, lambda = .5, mu = c(55, 80), sigma = c(5,5))
+plot(wait1, density = TRUE, cex.axis = 1.4, cex.lab = 1.5, cex.main = 1.5,
+     main2 = "Time between Old Faithful eruptions", xlab2 = "Minutes")
+
+```
+
 
 ## Simulated Data: Univariate
 
-## Simulated Data: Multivariate
+## Simulated Data: Multivariate 
 
 ## Real Data: Old Faithful
 
