--- a/mcem-simulations.Rmd
+++ b/mcem-simulations.Rmd
@@ -11,6 +11,8 @@ library(ggplot2)
 library(reshape2)
 library(cowplot)
 library(matrixStats)
+library(gridExtra)
+library(xtable)
 ```
 
 # EM vs. Monte Carlo EM
@@ -97,10 +99,6 @@ normalmix_mcem <- function (x, lambda = NULL, mu = NULL, sigsqrd = NULL,
 
 ```{r traditional-em, cache = TRUE}
 attach(faithful)
-library(ggplot2)
-library(reshape)
-library(cowplot)
-library(xtable)
 wait1 <- normalmixEM(waiting, lambda = .5, mu = c(55, 80), sigma = c(5,5))
 plot(wait1, density = TRUE, cex.axis = 1.4, cex.lab = 1.5, cex.main = 1.5,
      main2 = "Time between Old Faithful eruptions", xlab2 = "Minutes", whichplots = 2)
@@ -112,23 +110,39 @@ numObs = 1000
 x = NULL
 x = rnormmix(n=numObs*numSims,lambda = c(0.3,0.7),mu=c(5,10),sigma=c(2,3)) # generate the data
 matrix_results_normalEM = matrix(0,nrow = numSims,ncol = 8)
+matrix_results_mcem = matrix(NA, nrow = numSims, ncol = 8)
+
 for (i in 1:numSims){
     # 1- 1000, 1001-2000, 2001-3000,...
-  time = system.time({
+  time_em = system.time({
       normalEM = normalmixEM(x[(numObs*(i-1)+1):(numObs*(i))],maxit = 10000)
+  })
+  time_mcem = system.time({
+      mcem = normalmix_mcem(x[(numObs*(i-1)+1):(numObs*(i))],maxit = 10000)
   })
   matrix_results_normalEM[i,1:2] = normalEM$lambda
   matrix_results_normalEM[i,3:4] = normalEM$mu
   matrix_results_normalEM[i,5:6] = normalEM$sigma
   matrix_results_normalEM[i,7] = length(normalEM$all.loglik)
-  matrix_results_normalEM[i,8] = time[3]
+  matrix_results_normalEM[i,8] = time_em[3]
+  
+  matrix_results_mcem[i, 1:2] = mcem$lambda
+  matrix_results_mcem[i, 3:4] = mcem$mu
+  matrix_results_mcem[i, 5:6] = mcem$sigma
+  matrix_results_mcem[i, 7] = length(mcem$all.loglik)
+  matrix_results_mcem[i, 8] = time_mcem[3]
+  
 }
 
 dataframe_results_normalEM = as.data.frame(matrix_results_normalEM)
 colnames(dataframe_results_normalEM) = c("lambda1","lambda2","mu1","mu2",
                                          "sigma1","sigma2","numIters","timing")
+dataframe_results_mcem = as.data.frame(matrix_results_mcem)
+colnames(dataframe_results_mcem) = c("lambda1","lambda2","mu1","mu2",
+                                         "sigma1","sigma2","numIters","timing")
 
 summary(dataframe_results_normalEM$timing)
+summary(dataframe_results_mcem$timing)
 
 dataframe_results_normalEM$simulations = seq(1,numSims)
 melted_df = melt(dataframe_results_normalEM[,-7],id.vars = "simulations")
@@ -161,11 +175,6 @@ load("sim_K50.RData")
 
 # it is in gh_beta0, gh_beta1, mcem_beta0, and mcem_beta1
 
-library(mixtools)
-library(ggplot2)
-library(reshape)
-library(cowplot)
-library(gridExtra)
 dataframe_results_MCEM = as.data.frame(out_K10)
 dataframe_results_MCEM_K50 = as.data.frame(out_K50)
 
