update figures so MCEM is same color

--- a/mcem-simulations.Rmd
+++ b/mcem-simulations.Rmd
@@ -152,7 +152,7 @@ melted_df = melt(dataframe_results_normalEM[,-c(7,8)],id.vars = "simulations")
 melted_df_mcem = melt(dataframe_results_mcem[,-c(7,8)],id.vars = "simulations")
 
 melted_df_all = rbind(melted_df,melted_df_mcem)
-melted_df_all$method = c(rep("normalEM",length(melted_df$simulations)),
+melted_df_all$method = c(rep("EM",length(melted_df$simulations)),
                        rep("MCEM",length(melted_df_mcem$simulations)))
 p <- ggplot(melted_df_all) + geom_violin(aes(factor(variable), value,fill=factor(method))) +
     ylab("Value") + xlab("") +
